--- a/recipe.style.css
+++ b/recipe.style.css
@@ -1,3 +1,4 @@
+
  .jumbotron {
     text-align: center;
     background-color: black;
@@ -10,10 +11,17 @@
   }
 
   .card{
-    background:black
+    background:black;
 
 
   }
-  #randon-recipe{
-    color:white
-  }
+ h5{ color:white;
+     
+ }
+
+ h4{ color:white;
+
+ }
+ li{color:white;
+
+ }
