set overall font

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
   /* background:#000022; */
   background-color: #101010;
   color: white;
+
+  font-family: 'Work Sans', sans-serif;
 }
 
 a {
